kubernetes/merge-freeze-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge-freeze-web
spec:
  replicas: 1
  selector:
    matchLabels:
      component: merge-freeze-web
  template:
    metadata:
      labels:
        component: merge-freeze-web
    spec:
      containers:
        - name: merge-freeze-web
          image: 146043269776.dkr.ecr.us-west-2.amazonaws.com/merge-freeze:fake-img-tag
          ports:
            - containerPort: 3100
          resources:
            requests:
              memory: 75Mi
              cpu: '0.01'
            limits:
              memory: 150Mi
              cpu: '0.05'
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: merge-freeze-web
  name: merge-freeze-web
spec:
  type: ClusterIP
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    component: merge-freeze-web
