kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merge-freeze
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: "mergefreeze.procurify.com"
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service: 
                name: merge-freeze
                port: 
                  number: 3100
